Agregando diferentes secciones

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </button>
                 <div class="dropdown-content">
                     <a href="#aboutUs">About Us</a>
-                    <a href="#contribute ">Contribute</a>
+                    <a href="#contribute">Contribute</a>
                     <a href="#contact">Contact </a>
                 </div>
             </div>
@@ -33,16 +33,34 @@
             <a href="#tutorial">Tutorial</a>
         </div>
     </nav>
-    <video autoplay muted loop playsinline class="video-fondo">
-        <source src="videos/fondo2.mp4" type="video/mp4">
-        Tu navegador no soporta videos.
-    </video>
+
 
     <section id="principal">
-        <h1>Virtual Project</h1>
-        <p>This is a virtual test project</p>
+        <video autoplay muted loop playsinline class="video-fondo">
+            <source src="videos/fondo2.mp4" type="video/mp4">
+            Tu navegador no soporta videos.
+        </video>
+        <div class="content">
+            <h1>Virtual Project</h1>
+            <p>This is a virtual test project</p>
 
-        <button>DOWNLOAD</button>
+            <button>DOWNLOAD</button>
+        </div>
+    </section>
+    <section id="whatis">
+        <h1>What is</h1>
+        <p>This is What is</p>
+
+    </section>
+    <section id="preview">
+        <h1>Preview</h1>
+        <p>This isPreview</p>
+
+    </section>
+    <section id="tutorial">
+        <h1>Tutorial</h1>
+        <p>This is Tutorial</p>
+
     </section>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
