--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 </button>
                 <div class="dropdown-content">
                     <a href="#aboutUs">About Us</a>
-                    <a href="#contribute">Contribute</a>
                     <a href="#contact">Contact </a>
                 </div>
             </div>
@@ -47,21 +46,17 @@
             <button>DOWNLOAD</button>
         </div>
     </section>
-    <section id="whatis">
-        <h1>What is</h1>
-        <p>This is What is</p>
+    <section id="aboutus">
+        <h1>About us</h1>
+        <p>This is Aboutus</p>
 
     </section>
     <section id="preview">
-        <h1>Preview</h1>
-        <p>This isPreview</p>
+        <h1>Contact</h1>
+        <p>This is Contact</p>
 
     </section>
-    <section id="tutorial">
-        <h1>Tutorial</h1>
-        <p>This is Tutorial</p>
 
-    </section>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const video = document.querySelector(".video-fondo");
