--- a/index.html
+++ b/index.html
@@ -46,11 +46,22 @@
             <button>DOWNLOAD</button>
         </div>
     </section>
+
     <section id="aboutus">
         <h1>About us</h1>
         <p>This is Aboutus</p>
 
     </section>
+
+    <section class="whatis"id="whatis">
+        <div class="texto">
+            <h1>What Is</h1>
+        </div>
+        <div class="imagen">
+            <img src="imagen.jpg" alt="imagen">
+        </div>
+    </section>
+
     <section id="preview">
         <h1>Contact</h1>
         <p>This is Contact</p>
