--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 </button>
                 <div class="dropdown-content">
                     <a href="#aboutUs">About Us</a>
+                    <a href="#collaborators">Collaborators </a>
                     <a href="#contact">Contact </a>
                 </div>
             </div>
@@ -237,7 +238,7 @@
             </div>
 
             <div class="text-center">
-                <p class="mb-0">&copy; 2025 Virtual Project. Todos los derechos reservados.</p>
+                <p class="mb-0">&copy; 2025 Virtual Factory. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
