--- a/index.html
+++ b/index.html
@@ -174,16 +174,15 @@
                 </div>
 
                 <div class="col-md-3">
-                    <div class="card-client">
+                    <div class="card-client" data-email="ximena.aledel@gmail.com">
                         <div class="user-picture">
-                            <img src="images/collaborator2.jpg" alt="Collaborator 2">
+                            <img src="" alt="Collaborator 1">
                         </div>
-                        <p class="name-client">Nombre 2
-                            <span>Puesto</span>
+                        <p class="name-client">Eduardo González López
+                            <span>Desarrollador de software</span>
                         </p>
                         <div class="social-media">
-                            <a href="#"><i class="bi bi-linkedin"></i></a>
-                            <a href="#"><i class="bi bi-github"></i></a>
+                            <a href="https://github.com/Eduardo-L5" target="_blank"><i class="bi bi-github"></i></a>
                             <a href="#" onclick="copyEmail(event)"><i class="bi bi-envelope-fill"></i></a>
                             <div class="tooltip" id="tooltip">Correo copiado</div>
                         </div>
