hacer que se muestre sección de about us

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id="background-container">
     <section id="aboutus" class="aboutUsContainer">
         <div class="content">
-            <h1 class="aboutUsTitle">About Us</h1>
+            <h1 class="aboutUsTitle">Acerca de nosotros</h1>
             <section id="cards-section">
                 <div class="cards-container">
                     <div class="flip-card">
@@ -307,6 +307,12 @@
         </div>
     </footer>
     <script src="estilos.js"></script>
+   <script>
+    document.addEventListener("DOMContentLoaded", function () {
+    document.getElementById("aboutus").classList.add("visible");
+});
+    </script>
+    
 </body>
 
 </html>
