Silenciando el video del carrusel

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                         <img src="images/img4.jpg" class="d-block w-100" alt="image4">
                     </div>
                     <div class="carousel-item">
-                        <video id="carouselVideo" class="d-block w-100" controls>
+                        <video id="carouselVideo" class="d-block w-100" controls muted>
                             <source src="videos/gameplay.mp4" type="video/mp4">
-                            Tu navegador no soporta el elemento de video.
+                            Tu navegador no soporta el elemento de video.
                         </video>
                     </div>
                 </div>
