--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#aboutus">Sobre Nosotros</a>
-                    <a href="#collaborators">Colaboradores </a>
-                    <a href="#contact">Contacto</a>
+                    <a href="#aboutus">About Us</a>
+                    <a href="#collaborators">Collaborators </a>
+                    <a href="#contact">Contact </a>
                 </div>
             </div>
         </div>
@@ -32,8 +32,8 @@
         <a href="#" class="logo">Virtual Factory</a>
 
         <div class="nav-right">
-            <a href="#whatis">¿En qué consiste?</a>
-            <a href="#preview">Vista Previa</a>
+            <a href="#whatis">What is</a>
+            <a href="#preview">Preview</a>
             <a href="#tutorial">Tutorial</a>
         </div>
     </nav>
@@ -130,7 +130,7 @@
 
 
         <section id="preview">
-            <h1>Vista Previa</h1>
+            <h1>Preview</h1>
             <p>Aqui se muestra como se ve el juego ya en acción</p>
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -147,10 +147,10 @@
                         <img src="images/img4.jpg" class="d-block w-100" alt="image4">
                     </div>
                     <div class="carousel-item">
-                        <video id="carouselVideo" class="d-block w-100" controls>
+                        <video id="carouselVideo" class="d-block w-100" controls muted>
                             <source src="videos/gameplay.mp4" type="video/mp4">
                             Tu navegador no soporta el elemento de video.
-                        </video>
+                        </video>                        
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
@@ -174,7 +174,7 @@
 
         <section id="collaborators">
             <div class="container">
-                <h1 class="text-center">Colaboradores</h1>
+                <h1 class="text-center">Collaborators</h1>
                 <div class="row">
                     <div class="col-md-3">
                         <div class="card-client" data-email="ximena.aledel@gmail.com">
@@ -182,7 +182,7 @@
                                 <img src="images/xim1.jpg" alt="Collaborator 1">
                             </div>
                             <p class="name-client">Ximena Delabra Castillo
-                                <span>Desarrollo de software</span>
+                                <span>Desarrollador de software</span>
                             </p>
                             <div class="social-media">
                                 <a href="https://www.linkedin.com/in/ximenadelabra/" target="_blank"><i
@@ -200,7 +200,7 @@
                                 <img src="" alt="Collaborator 1">
                             </div>
                             <p class="name-client">Eduardo González López
-                                <span>Desarrollo de software</span>
+                                <span>Desarrollador de software</span>
                             </p>
                             <div class="social-media">
                                 <a href="https://github.com/Eduardo-L5" target="_blank"><i class="bi bi-github"></i></a>
@@ -216,7 +216,7 @@
                                 <img src="images/raul.jpg" alt="Collaborator 3">
                             </div>
                             <p class="name-client">Raul De Jesus Martinez Cortez
-                                <span>Desarrollo de software</span>
+                                <span>Desarrollador de software</span>
                             </p>
                             <div class="social-media">
                                 <a href="https://github.com/animecrex"><i class="bi bi-github"></i></a>
@@ -231,26 +231,9 @@
                                 <img src="images/karoll.jpeg" alt="Collaborator 4">
                             </div>
                             <p class="name-client">Karoll Molina Valadez
-                                <span>Desarrollo de software</span>
+                                <span>Desarrollador de software</span>
                             </p>
                             <div class="social-media">
-                                <a href="#" onclick="copyEmail(event)"><i class="bi bi-envelope-fill"></i></a>
-                                <div class="tooltip">Correo copiado</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card-client" data-email="espejelmairene@gmail.com">
-                            <div class="user-picture">
-                                <img src="images/.jpg" alt="Collaborator 5">
-                            </div>
-                            <p class="name-client">Mairene Andrea Espejel Rodríguez
-                                <span>Entornos Virtuales y negocios Digitales</span>
-                            </p>
-                            <div class="social-media">
-                                <a href="https://www.linkedin.com/in/mairene-andrea-espejel-rodriguez-424595326/" target="_blank"><i
-                                        class="bi bi-linkedin"></i></a>
-                                <a href="https://github.com/Mainnie" target="_blank"><i class="bi bi-github"></i></a>
                                 <a href="#" onclick="copyEmail(event)"><i class="bi bi-envelope-fill"></i></a>
                                 <div class="tooltip">Correo copiado</div>
                             </div>
@@ -269,9 +252,9 @@
                     <h5 class="fw-bold">Navegación</h5>
                     <ul class="list-unstyled">
                         <li><a href="#principal" class="text-light text-decoration-none footer-link">Inicio</a></li>
-                        <li><a href="#aboutus" class="text-light text-decoration-none footer-link">Sobre Nosotros</a></li>
-                        <li><a href="#whatis" class="text-light text-decoration-none footer-link">¿En qué consiste?</a></li>
-                        <li><a href="#preview" class="text-light text-decoration-none footer-link">Vista Previa</a></li>
+                        <li><a href="#aboutus" class="text-light text-decoration-none footer-link">About Us</a></li>
+                        <li><a href="#whatis" class="text-light text-decoration-none footer-link">What Is</a></li>
+                        <li><a href="#preview" class="text-light text-decoration-none footer-link">Preview</a></li>
                     </ul>
                 </div>
 
@@ -301,8 +284,6 @@
 
                 <div class="col-md-3">
                     <h5 class="fw-bold">Ubicación</h5>
-                    <p class="mb-1"><img src="images/logo utc.png" alt="" width="16px"> Universidad Tecnológica de Coahuila</p>
-                    <p class="mb-1">Edificio II Tecnologías de la Información</p>
                     <p class="mb-1"><i class="bi bi-geo-alt"></i> Ramos Arizpe, México</p>
                     <a href="https://maps.app.goo.gl/5Zkd6AZ3omxkoYw96" target="_blank"
                         class="text-light text-decoration-none footer-link">
