--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             <div class="user-picture">
                                 <img src="images/.jpg" alt="Collaborator 5">
                             </div>
-                            <p class="name-client">Mairene Andrea Espejel Rodríguez
+                            <p class="name-client">Mairene Espejel Rodríguez
                                 <span>Entornos Virtuales y negocios Digitales</span>
                             </p>
                             <div class="social-media">
@@ -260,8 +260,8 @@
             </div>
         </section>
 
-    </section>
-    <footer class="bg-dark text-light pt-5 pb-4">
+    
+    <footer class="text-light pt-5 pb-4">
         <div class="container">
             <div class="row text-center text-md-start">
 
@@ -301,7 +301,7 @@
 
                 <div class="col-md-3">
                     <h5 class="fw-bold">Ubicación</h5>
-                    <p class="mb-1"><img src="images/logo utc.png" alt="" width="16px"> Universidad Tecnológica de Coahuila</p>
+                    <p class="mb-1"><img src="images/logo utc.png" alt="" width="20px"> Universidad Tecnológica de Coahuila</p>
                     <p class="mb-1">Edificio II Tecnologías de la Información</p>
                     <p class="mb-1"><i class="bi bi-geo-alt"></i> Ramos Arizpe, México</p>
                     <a href="https://maps.app.goo.gl/5Zkd6AZ3omxkoYw96" target="_blank"
@@ -312,7 +312,7 @@
 
             </div>
 
-            <hr class="bg-light my-4">
+            <hr class="bg-light my-4" >
 
             <div class="text-center mb-3">
                 <blockquote class="fst-italic text-light opacity-75">
@@ -325,6 +325,7 @@
             </div>
         </div>
     </footer>
+</section>
     <script src="estilos.js"></script>
    <script>
     document.addEventListener("DOMContentLoaded", function () {
