--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </video>
         <div class="content">
             <h1>Virtual Factory</h1>
-            <p>This is a virtual test project</p>
+            <p>Sumérgete en la industria con RV.</p>
 
             <button>DOWNLOAD</button>
         </div>
