Arreglando detalles de estilos y redaccion

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <section id="preview">
             <h1>Preview</h1>
-            <p>Aqui se muestra como se ve el juego ya en acción</p>
+            <p>Descubre cómo se ve el juego en acción a través de imágenes y video.</p>
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -175,8 +175,8 @@
         </section>
 
         <section id="tutorial">
-            <h1>Tutorial</h1><br>
-            <p>Aqui un pequeño gameplay de como usar este juego </p>
+            <h1>Tutorial</h1>
+            <p>A continuación, te mostramos un breve tutorial sobre cómo jugar y utilizar las funciones del juego.</p>
             <video src="videos/tutorial.mp4" controls height="450px" width="250px"></video>
         </section>
 
