--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
                     <div class="col-md-3">
                         <div class="card-client" data-email="espejelmairene@gmail.com">
                             <div class="user-picture">
-                                <img src="images/.jpg" alt="Collaborator 5">
+                                <img src="images/colaborador 5.jpg" alt="Collaborator 5">
                             </div>
                             <p class="name-client">Mairene Espejel Rodríguez
-                                <span>Entornos Virtuales y negocios Digitales</span>
+                                <span>Entornos Virtuales y Negocios Digitales</span>
                             </p>
                             <div class="social-media">
                                 <a href="https://www.linkedin.com/in/mairene-andrea-espejel-rodriguez-424595326/"
@@ -262,6 +262,103 @@
                                 <a href="#" onclick="copyEmail(event)"><i class="bi bi-envelope-fill"></i></a>
                                 <div class="tooltip">Correo copiado</div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card-client" >
+                            <div class="user-picture">
+                                <img src="images/colaborador 6.jpg" alt="Collaborator 6">
+                            </div>
+                            <p class="name-client">Danelly Gonzalez Javier
+                                <span>Entornos Virtuales y Negocios Digitales</span>
+                            </p>
+                            <div class="social-media">
+                                <a href="https://www.linkedin.com/in/gonzalez-javier-danelly-090994350"
+                                    target="_blank"><i class="bi bi-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card-client" >
+                            <div class="user-picture">
+                                <img src="images/colaborador 7.jpg" alt="Collaborator 7">
+                            </div>
+                            <p class="name-client">Francisco Asis Marin Peña
+                                <span>Moldes y Troqueles</span>
+                            </p>
+                            <div class="social-media">
+                                <a href="https://www.linkedin.com/in/gonzalez-javier-danelly-090994350"
+                                    target="_blank"><i class="bi bi-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card-client" >
+                            <div class="user-picture">
+                                <img src="images/colaborador 8.jpg" alt="Collaborator 8">
+                            </div>
+                            <p class="name-client">Rafael Cortes Aburto
+                                <span>Moldes y Troqueles</span>
+                            </p>
+                            <div class="social-media">
+                                <a href="https://www.linkedin.com/in/rafael-cortes-aburto-4b07a8350?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+                                "
+                                    target="_blank"><i class="bi bi-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card-client" >
+                            <div class="user-picture">
+                                <img src="images/colaborador 9.jpg" alt="Collaborator 9">
+                            </div>
+                            <p class="name-client">Carlos De los Santos Suárez
+                                <span>Entornos Virtuales y Negocios Digitales</span>
+                            </p>
+                            <div class="social-media">
+                                <a href="https://www.linkedin.com/in/carlos-de-los-santos-64829232a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+                                "
+                                    target="_blank"><i class="bi bi-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card-client" >
+                            <div class="user-picture">
+                                <img src="images/colaborador 10.jpg" alt="Collaborator 10">
+                            </div>
+                            <p class="name-client">Ricardo Jael Pedraza Estrada
+                                <span>Moldes y Troqueles</span>
+                            </p>
+                            <div class="social-media">
+                                <a href="https://www.linkedin.com/in/ricardo-jael-pedraza-estrada-a877b42a5?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                                    target="_blank"><i class="bi bi-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card-client" >
+                            <div class="user-picture">
+                                <img src="images/colaborador 11.jpg" alt="Collaborator 11">
+                            </div>
+                            <p class="name-client">Francisco Asis Marin Peña
+                                <span>Moldes y Troqueles</span>
+                            </p>
+                            <div class="social-media">
+                                <a href="https://www.linkedin.com/in/francisco-asis-marin-pe%C3%B1a-0a8845357?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                                    target="_blank"><i class="bi bi-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card-client" >
+                            <div class="user-picture">
+                                <img src="images/colaborador 12.jpg" alt="Collaborator 12">
+                            </div>
+                            <p class="name-client">Alondra Guadalupe Santana Castillo 
+                                <span>Moldes y Troqueles</span>
+                            </p>
+                            
                         </div>
                     </div>
                 </div>
