--- a/index.html
+++ b/index.html
@@ -248,6 +248,21 @@
                         </div>
                     </div>
                     <div class="col-md-3">
+                        <div class="card-client" data-email="jorge062208@gmail.com">
+                            <div class="user-picture">
+                                <img src="images/jorge.jpg" alt="Collaborator 13">
+                            </div>
+                            <p class="name-client">Jorge Martinez Gómez
+                                <span>Desarrollador de software</span>
+                            </p>
+                            <div class="social-media">
+                                <a href="https://github.com/george01prog" target="_blank"><i class="bi bi-github"></i></a>
+                                <a href="#" onclick="copyEmail(event)"><i class="bi bi-envelope-fill"></i></a>
+                                <div class="tooltip">Correo copiado</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
                         <div class="card-client" data-email="espejelmairene@gmail.com">
                             <div class="user-picture">
                                 <img src="images/colaborador 5.jpg" alt="Collaborator 5">
