--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <h1>Virtual Factory</h1>
             <p>Sumérgete en la industria con RV.</p>
 
-            <button>DOWNLOAD</button>
+            <a href="https://drive.google.com/file/d/1r1G3r10Z0tNAOSQi-RgbcaW6YZwg9eh2/view?usp=drive_link"
+                class="button">DOWNLOAD</a>
         </div>
     </section>
     <section id="background-container">
@@ -183,14 +184,14 @@
         <section id="collaborators">
             <div class="container">
                 <h1 class="text-center">Collaborators</h1>
-                <div class="row">
-                    <div class="col-md-3">
+                <div class="row row-desarrollo justify-content-center">
+                    <div class="col-xxl-2_4 col-lg-3 col-md-4 col-sm-6">
                         <div class="card-client" data-email="ximena.aledel@gmail.com">
                             <div class="user-picture">
                                 <img src="images/xim1.jpg" alt="Collaborator 1">
                             </div>
                             <p class="name-client">Ximena Delabra Castillo
-                                <span>Desarrollador de software</span>
+                                <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
                                 <a href="https://www.linkedin.com/in/ximenadelabra/" target="_blank"><i
@@ -202,13 +203,13 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-xxl-2_4 col-lg-3 col-md-4 col-sm-6">
                         <div class="card-client" data-email="ximena.aledel@gmail.com">
                             <div class="user-picture">
-                                <img src="" alt="Collaborator 1">
+                                <img src="images/colaborador 2.jpg" alt="Collaborator 2">
                             </div>
                             <p class="name-client">Eduardo González López
-                                <span>Desarrollador de software</span>
+                                <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
                                 <a href="https://github.com/Eduardo-L5" target="_blank"><i class="bi bi-github"></i></a>
@@ -218,13 +219,13 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-xxl-2_4 col-lg-3 col-md-4 col-sm-6">
                         <div class="card-client" data-email="rauldejesusmartinezcortez9@gmail.com">
                             <div class="user-picture">
                                 <img src="images/raul.jpg" alt="Collaborator 3">
                             </div>
-                            <p class="name-client">Raul De Jesus Martinez Cortez
-                                <span>Desarrollador de software</span>
+                            <p class="name-client">Raul Martinez Cortez
+                                <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
                                 <a href="https://github.com/animecrex"><i class="bi bi-github"></i></a>
@@ -233,13 +234,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-xxl-2_4 col-lg-3 col-md-4 col-sm-6">
                         <div class="card-client" data-email="molinavkaroll@gmail.com">
                             <div class="user-picture">
                                 <img src="images/karoll.jpeg" alt="Collaborator 4">
                             </div>
                             <p class="name-client">Karoll Molina Valadez
-                                <span>Desarrollador de software</span>
+                                <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
                                 <a href="#" onclick="copyEmail(event)"><i class="bi bi-envelope-fill"></i></a>
@@ -247,22 +248,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-xxl-2_4 col-lg-3 col-md-4 col-sm-6">
                         <div class="card-client" data-email="jorge062208@gmail.com">
                             <div class="user-picture">
                                 <img src="images/jorge.jpg" alt="Collaborator 13">
                             </div>
                             <p class="name-client">Jorge Martinez Gómez
-                                <span>Desarrollador de software</span>
+                                <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
-                                <a href="https://github.com/george01prog" target="_blank"><i class="bi bi-github"></i></a>
+                                <a href="https://github.com/george01prog" target="_blank"><i
+                                        class="bi bi-github"></i></a>
                                 <a href="#" onclick="copyEmail(event)"><i class="bi bi-envelope-fill"></i></a>
                                 <div class="tooltip">Correo copiado</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                </div>
+                <div class="row row-entornos justify-content-center">
+                    <div class="col-md-4">
                         <div class="card-client" data-email="espejelmairene@gmail.com">
                             <div class="user-picture">
                                 <img src="images/colaborador 5.jpg" alt="Collaborator 5">
@@ -279,8 +283,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="card-client" >
+                    <div class="col-md-4">
+                        <div class="card-client">
                             <div class="user-picture">
                                 <img src="images/colaborador 6.jpg" alt="Collaborator 6">
                             </div>
@@ -293,37 +297,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="card-client" >
-                            <div class="user-picture">
-                                <img src="images/colaborador 7.jpg" alt="Collaborator 7">
-                            </div>
-                            <p class="name-client">Francisco Asis Marin Peña
-                                <span>Moldes y Troqueles</span>
-                            </p>
-                            <div class="social-media">
-                                <a href="https://www.linkedin.com/in/gonzalez-javier-danelly-090994350"
-                                    target="_blank"><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card-client" >
-                            <div class="user-picture">
-                                <img src="images/colaborador 8.jpg" alt="Collaborator 8">
-                            </div>
-                            <p class="name-client">Rafael Cortes Aburto
-                                <span>Moldes y Troqueles</span>
-                            </p>
-                            <div class="social-media">
-                                <a href="https://www.linkedin.com/in/rafael-cortes-aburto-4b07a8350?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-                                "
-                                    target="_blank"><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card-client" >
+                    <div class="col-md-4">
+                        <div class="card-client">
                             <div class="user-picture">
                                 <img src="images/colaborador 9.jpg" alt="Collaborator 9">
                             </div>
@@ -332,17 +307,33 @@
                             </p>
                             <div class="social-media">
                                 <a href="https://www.linkedin.com/in/carlos-de-los-santos-64829232a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-                                "
-                                    target="_blank"><i class="bi bi-linkedin"></i></a>
+                                " target="_blank"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="card-client" >
+                </div>
+                <div class="row row-moldes">
+                    <div class="col-3">
+                        <div class="card-client">
+                            <div class="user-picture">
+                                <img src="images/colaborador 8.jpg" alt="Collaborator 8">
+                            </div>
+                            <p class="name-client">Rafael Cortes Aburto
+                                <span>Moldes y Troqueles</span>
+                            </p>
+                            <div class="social-media">
+                                <a href="https://www.linkedin.com/in/rafael-cortes-aburto-4b07a8350?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+                                " target="_blank"><i class="bi bi-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-3">
+                        <div class="card-client">
                             <div class="user-picture">
                                 <img src="images/colaborador 10.jpg" alt="Collaborator 10">
                             </div>
-                            <p class="name-client">Ricardo Jael Pedraza Estrada
+                            <p class="name-client">Ricardo Pedraza Estrada
                                 <span>Moldes y Troqueles</span>
                             </p>
                             <div class="social-media">
@@ -351,12 +342,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="card-client" >
+                    <div class="col-3">
+                        <div class="card-client">
                             <div class="user-picture">
                                 <img src="images/colaborador 11.jpg" alt="Collaborator 11">
                             </div>
-                            <p class="name-client">Francisco Asis Marin Peña
+                            <p class="name-client">Francisco Marin Peña
                                 <span>Moldes y Troqueles</span>
                             </p>
                             <div class="social-media">
@@ -365,18 +356,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="card-client" >
+                    <div class="col-3">
+                        <div class="card-client">
                             <div class="user-picture">
                                 <img src="images/colaborador 12.jpg" alt="Collaborator 12">
                             </div>
-                            <p class="name-client">Alondra Guadalupe Santana Castillo 
+                            <p class="name-client">Alondra Santana Castillo
                                 <span>Moldes y Troqueles</span>
                             </p>
-                            
+
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
 
@@ -448,11 +440,6 @@
         </footer>
     </section>
     <script src="estilos.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            document.getElementById("aboutus").classList.add("visible");
-        });
-    </script>
 
 </body>
 
