--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <h1>Virtual Factory</h1>
             <p>Sumérgete en la industria con RV.</p>
 
-            <a href="https://drive.google.com/file/d/1r1G3r10Z0tNAOSQi-RgbcaW6YZwg9eh2/view?usp=drive_link"
-                class="button">DOWNLOAD</a>
+            <button class="button" onclick="window.location.href='My-project.exe'">DOWNLOAD</button>
+
         </div>
     </section>
     <section id="background-container">
