Detalles de la pagina

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="#" class="logo">Virtual Factory</a>
 
         <div class="nav-right">
-            <a href="#whatis">¿En qué consiste?</a>
+            <a href="#whatis">¿De qué trata?</a>
             <a href="#preview">Vista Previa</a>
             <a href="#tutorial">Tutorial</a>
         </div>
@@ -115,7 +115,7 @@
 
         <section class="whatis" id="whatis">
             <div class="imagen">
-                <h1>¿En qué consiste?</h1>
+                <h1>¿De qué trata?</h1>
                 <div class="flip-container">
                     <div class="front">
                         <img src="images/whatis.jpg" alt="Imagen de entorno industrial">
@@ -134,7 +134,7 @@
 
 
         <section id="preview">
-            <h1>Preview</h1>
+            <h1>Vista Previa</h1>
             <p>Descubre cómo se ve el juego en acción a través de imágenes y video.</p>
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
@@ -183,14 +183,14 @@
 
         <section id="collaborators">
             <div class="container">
-                <h1 class="text-center">Collaborators</h1>
+                <h1 class="text-center">Colaboradores</h1>
                 <div class="row row-desarrollo justify-content-center">
                     <div class="col-xxl-2_4 col-lg-3 col-md-4 col-sm-6">
                         <div class="card-client" data-email="ximena.aledel@gmail.com">
                             <div class="user-picture">
                                 <img src="images/xim1.jpg" alt="Collaborator 1">
                             </div>
-                            <p class="name-client">Ximena Delabra Castillo
+                            <p class="name-client">Ximena Delabra
                                 <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
@@ -208,7 +208,7 @@
                             <div class="user-picture">
                                 <img src="images/colaborador 2.jpg" alt="Collaborator 2">
                             </div>
-                            <p class="name-client">Eduardo González López
+                            <p class="name-client">Eduardo González
                                 <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
@@ -224,7 +224,7 @@
                             <div class="user-picture">
                                 <img src="images/raul.jpg" alt="Collaborator 3">
                             </div>
-                            <p class="name-client">Raul Martinez Cortez
+                            <p class="name-client">Raul Martinez
                                 <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
@@ -239,7 +239,7 @@
                             <div class="user-picture">
                                 <img src="images/karoll.jpeg" alt="Collaborator 4">
                             </div>
-                            <p class="name-client">Karoll Molina Valadez
+                            <p class="name-client">Karoll Molina
                                 <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
@@ -253,7 +253,7 @@
                             <div class="user-picture">
                                 <img src="images/jorge.jpg" alt="Collaborator 13">
                             </div>
-                            <p class="name-client">Jorge Martinez Gómez
+                            <p class="name-client">Jorge Martinez
                                 <span>Desarrollo de software</span>
                             </p>
                             <div class="social-media">
@@ -271,7 +271,7 @@
                             <div class="user-picture">
                                 <img src="images/colaborador 5.jpg" alt="Collaborator 5">
                             </div>
-                            <p class="name-client">Mairene Espejel Rodríguez
+                            <p class="name-client">Mairene Rodríguez
                                 <span>Entornos Virtuales y Negocios Digitales</span>
                             </p>
                             <div class="social-media">
@@ -288,7 +288,7 @@
                             <div class="user-picture">
                                 <img src="images/colaborador 6.jpg" alt="Collaborator 6">
                             </div>
-                            <p class="name-client">Danelly Gonzalez Javier
+                            <p class="name-client">Danelly Gonzalez
                                 <span>Entornos Virtuales y Negocios Digitales</span>
                             </p>
                             <div class="social-media">
@@ -302,7 +302,7 @@
                             <div class="user-picture">
                                 <img src="images/colaborador 9.jpg" alt="Collaborator 9">
                             </div>
-                            <p class="name-client">Carlos De los Santos Suárez
+                            <p class="name-client">Carlos De los Santos
                                 <span>Entornos Virtuales y Negocios Digitales</span>
                             </p>
                             <div class="social-media">
@@ -318,7 +318,7 @@
                             <div class="user-picture">
                                 <img src="images/colaborador 8.jpg" alt="Collaborator 8">
                             </div>
-                            <p class="name-client">Rafael Cortes Aburto
+                            <p class="name-client">Rafael Cortes
                                 <span>Moldes y Troqueles</span>
                             </p>
                             <div class="social-media">
@@ -333,7 +333,7 @@
                             <div class="user-picture">
                                 <img src="images/colaborador 10.jpg" alt="Collaborator 10">
                             </div>
-                            <p class="name-client">Ricardo Pedraza Estrada
+                            <p class="name-client">Ricardo Pedraza
                                 <span>Moldes y Troqueles</span>
                             </p>
                             <div class="social-media">
@@ -347,7 +347,7 @@
                             <div class="user-picture">
                                 <img src="images/colaborador 11.jpg" alt="Collaborator 11">
                             </div>
-                            <p class="name-client">Francisco Marin Peña
+                            <p class="name-client">Francisco Marin
                                 <span>Moldes y Troqueles</span>
                             </p>
                             <div class="social-media">
@@ -361,7 +361,7 @@
                             <div class="user-picture">
                                 <img src="images/colaborador 12.jpg" alt="Collaborator 12">
                             </div>
-                            <p class="name-client">Alondra Santana Castillo
+                            <p class="name-client">Alondra Santana
                                 <span>Moldes y Troqueles</span>
                             </p>
 
@@ -380,23 +380,23 @@
                     <div class="col-md-3">
                         <h5 class="fw-bold">Navegación</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#principal" class="text-light text-decoration-none footer-link">Inicio</a></li>
-                            <li><a href="#aboutus" class="text-light text-decoration-none footer-link">About Us</a></li>
-                            <li><a href="#whatis" class="text-light text-decoration-none footer-link">What Is</a></li>
-                            <li><a href="#preview" class="text-light text-decoration-none footer-link">Preview</a></li>
+                            <li><a href="#principal" class="text-decoration-none footer-link">Inicio</a></li>
+                            <li><a href="#aboutus" class="text-decoration-none footer-link">Sobre Nosotros</a></li>
+                            <li><a href="#whatis" class="text-decoration-none footer-link">¿De qué trata?</a></li>
+                            <li><a href="#preview" class="text-decoration-none footer-link">Vista Previa</a></li>
                         </ul>
                     </div>
 
                     <div class="col-md-3">
                         <h5 class="fw-bold">Síguenos</h5>
                         <div class="d-flex justify-content-md-start justify-content-center gap-3">
-                            <a href="https://www.facebook.com/?locale=es_LA" class="text-light fs-4 footer-icon"><i
+                            <a href="https://www.facebook.com/?locale=es_LA" class="fs-4 footer-icon"><i
                                     class="bi bi-facebook"></i></a>
-                            <a href="https://x.com/?lang=es" class="text-light fs-4 footer-icon"><i
+                            <a href="https://x.com/?lang=es" class="fs-4 footer-icon"><i
                                     class="bi bi-twitter"></i></a>
-                            <a href="https://www.instagram.com/" class="text-light fs-4 footer-icon"><i
+                            <a href="https://www.instagram.com/" class="fs-4 footer-icon"><i
                                     class="bi bi-instagram"></i></a>
-                            <a href="https://mx.linkedin.com/" class="text-light fs-4 footer-icon"><i
+                            <a href="https://mx.linkedin.com/" class="fs-4 footer-icon"><i
                                     class="bi bi-linkedin"></i></a>
                         </div>
                     </div>
@@ -404,8 +404,8 @@
                     <div class="col-md-3">
                         <h5 class="fw-bold">Información</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-light text-decoration-none footer-link">Términos de Uso</a></li>
-                            <li><a href="#" class="text-light text-decoration-none footer-link">Política de
+                            <li><a href="#" class="text-decoration-none footer-link">Términos de Uso</a></li>
+                            <li><a href="#" class="text-decoration-none footer-link">Política de
                                     Privacidad</a>
                             </li>
                         </ul>
@@ -418,7 +418,7 @@
                         <p class="mb-1">Edificio II Tecnologías de la Información</p>
                         <p class="mb-1"><i class="bi bi-geo-alt"></i> Ramos Arizpe, México</p>
                         <a href="https://maps.app.goo.gl/5Zkd6AZ3omxkoYw96" target="_blank"
-                            class="text-light text-decoration-none footer-link">
+                            class="text-decoration-none footer-link">
                             Ver en Google Maps
                         </a>
                     </div>
