--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="images/logo utc.png">
+
     <title>Virtual Factory</title>
 </head>
 
